Jvm downgrader (#28)
* use jvmDowngrader

* Update gradle-daemon-jvm.properties

* Update dependencies.gradle

* bugfix

* Update PageCompiler.java

* bugfix